<resources>
    <string name="app_name">quiz</string>
    <string name="grand_central_terminal_park_avenue_new_york_is_the_world_s">Grand Central Terminal, Park Avenue, New York is the world\'s</string>
    <string name="largest_railway_station">largest railway station</string>
    <string name="highest_railway_station">highest railway station</string>
    <string name="longest_railway_station">longest railway station</string>
    <string name="none_of_the_above">None of the above</string>
    <string name="entomology_is_the_science_that_studies">Entomology is the science that studies</string>
    <string name="the_origin_and_history_of_technical_and_scientific_terms">The origin and history of technical and scientific terms</string>
    <string name="the_formation_of_rocks">The formation of rocks</string>
    <string name="behavior_of_human_beings">Behavior of human beings</string>
    <string name="insects">Insects</string>
    <string name="eritrea_which_became_the_182nd_member_of_the_un_in_1993_is_in_the_continent_of">Eritrea, which became the 182nd member of the UN in 1993, is in the continent of</string>
    <string name="asia">Asia</string>
    <string name="africa">Africa</string>
    <string name="europe">Europe</string>
    <string name="australia">Australia</string>
    <string name="for_which_of_the_following_disciplines_is_nobel_prize_awarded">For which of the following disciplines is Nobel Prize awarded?</string>
    <string name="physics_and_chemistry">Physics and Chemistry</string>
    <string name="physiology_or_medicine">Physiology or Medicine</string>
    <string name="literature_peace_and_economics">Literature, Peace and Economics</string>
    <string name="all_of_the_above">All of the above</string>
    <string name="hitler_party_which_came_into_power_in_1933_is_known_as">Hitler party which came into power in 1933 is known as</string>
    <string name="labour_party">Labour Party</string>
    <string name="nazi_party">Nazi Party</string>
    <string name="ku_klux_klan">Ku-Klux-Klan</string>
    <string name="democratic_party">Democratic Party</string>
    <string name="which_of_the_following_is_are_types_of_carbohdrates">Which of the following is/are types of carbohdrates</string>
    <string name="galactose">galactose</string>
    <string name="sucrose">sucrose</string>
    <string name="lactose">lactose</string>
    <string name="maltose">maltose</string>
    <string name="sociolaogy_is_defined_as_a_study_of">Sociolaogy is defined as a study of</string>
    <string name="mental_illness_emotional_distubannce_and_abnormal_behaviour">Mental illness,emotional distubannce and abnormal behaviour</string>
    <string name="human_society">human society</string>
    <string name="human_mind_and_its_functions">human mind and its functions</string>
    <string name="human_interaction">human interaction</string>
    <string name="android_windows_linux_fedora_red_hat_ubuntu_are_all_examples_of">android,windows,linux,fedora,red hat,ubuntu are all examples of ____________</string>
    <string name="enter_your_answer_here">enter your answer here</string>
    <string name="submit">submit</string>
    <string name="is_the_fastest_land_animal">___________ is the fastest land animal</string>
    <string name="enter_your_name_here">enter your name here</string>
</resources>
